# google-jigsaw-agile-community-rules-silver

./: .gitignore  README.md  pyproject.toml  requirements-kaggle.txt
configs/: accelerate_zero2.yaml
scripts/: blend_submissions.py  infer_qwen_lora.py  install_kaggle_deps.sh  run_kaggle_pipeline.sh  train_infer_deberta.py  train_infer_gte.py  train_qwen_lora.py
src/jigsaw_agile/: __init__.py  blend.py  config.py  data.py  deberta_cls.py  gte_triplet.py  metrics.py  qwen_lora.py  text.py
